Fix the boolean operators in the spacing scss

--- a/gui/scss/core/_spacing.scss
+++ b/gui/scss/core/_spacing.scss
@@ -44,16 +44,16 @@
         @if ($i < 12) {
             @include options($props, $i, value($i));
             $i: $i + 1;
-        } @else if ($i >= 12 && $i < 16) {
+        } @else if ($i >= 12 and $i < 16) {
             @include options($props, $i, value($i));
             $i: $i + 2;
-        } @else if ($i >= 16 && $i < 64) {
+        } @else if ($i >= 16 and $i < 64) {
             @include options($props, $i, value($i));
             $i: $i + 4;
-        } @else if ($i >= 64 && $i < 80) {
+        } @else if ($i >= 64 and $i < 80) {
             @include options($props, $i, value($i));
             $i: $i + 8;
-        } @else if ($i >= 80 && $i < 96) {
+        } @else if ($i >= 80 and $i <= 96) {
             @include options($props, $i, value($i));
             $i: $i + 16;
         }
